refactor images